added clean, start and build scripts for package.json

--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"lint": "eslint . --ext .ts && yarn prettier --write .",
-		"start": "parcel index.html",
-		"build": "parcel build ./dist/index.js"
+		"clean": "rm -rf dist",
+		"start": "node dist/index.js",
+		"build": "npm run clean && npx tsc"
 	},
 	"bin": {
 		"create-web3-dapp": "./dist/index.js"
@@ -49,7 +50,6 @@
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/eversmile12/create-web3-dapp.git"
-	  },
-	  "homepage": "https://github.com/Eversmile12/create-web3-dapp/blob/main/README.md"
-
+	},
+	"homepage": "https://github.com/Eversmile12/create-web3-dapp/blob/main/README.md"
 }
