--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
 	],
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"lint": "eslint . --ext .ts && yarn prettier --write .",
+		"lint": "npx eslint . --ext .ts",
+		"lint:fix": "npx eslint . --ext .ts --fix",
 		"start": "npx tsc && npm link && npx create-web3-dapp"
 	},
 	"bin": {
@@ -31,8 +32,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.32.0",
 		"@typescript-eslint/parser": "^5.32.0",
 		"eslint": "^8.21.0",
-		"eslint-config-next": "12.2.3",
-		"prettier": "^2.7.1"
+		"eslint-config-next": "12.2.3"
 	},
 	"type": "module",
 	"dependencies": {
