feat: write to shared package instead of multiple packages

--- a/src/templates/cw3d.config.template
+++ b/src/templates/cw3d.config.template
@@ -7,11 +7,9 @@ export type CW3DConfig = {
 	testnetChainName: string;
 };
 
-const config = {
+export const chainConfig = {
 	mainnetName: "{{mainnetName}}",
 	mainnetChainId: {{mainnetChainId}},
 	testnetChainId: {{testnetChainId}},
 	testnetChainName: "{{testnetChainName}}",
 } as const satisfies CW3DConfig;
-
-export default config; 
